--- a/TBA/BONWhenView.storyboard
+++ b/TBA/BONWhenView.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -268,49 +268,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="V9u-Wz-ZkS">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="V9u-Wz-ZkS">
                                 <rect key="frame" x="150" y="75" width="300" height="450"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What you ate:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHV-iZ-nMw">
-                                        <rect key="frame" x="73" y="0.0" width="154" height="28"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What you ate:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHV-iZ-nMw">
+                                        <rect key="frame" x="73" y="0.0" width="154" height="88"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You didn't enter anything!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="249" translatesAutoresizingMaskIntoConstraints="NO" id="KRQ-aB-dhp">
-                                        <rect key="frame" x="52" y="82" width="196" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You didn't enter anything!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="249" translatesAutoresizingMaskIntoConstraints="NO" id="KRQ-aB-dhp">
+                                        <rect key="frame" x="52" y="98" width="196" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Where you ate:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02e-5p-fTg">
-                                        <rect key="frame" x="66" y="157" width="168" height="30"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_img" translatesAutoresizingMaskIntoConstraints="NO" id="EMU-gu-Ndw">
+                                        <rect key="frame" x="50" y="129" width="200" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="kVk-Gt-lSh"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="n2D-nN-eFv"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where you ate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKS-Ut-Ebj" userLabel="Where you ate:">
+                                        <rect key="frame" x="70" y="289" width="161" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You didn't enter anything!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xw-ui-Rnb">
-                                        <rect key="frame" x="52" y="241" width="196" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You didn't enter anything!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xw-ui-Rnb">
+                                        <rect key="frame" x="52" y="329" width="196" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="How you felt:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8I-OK-NFT">
-                                        <rect key="frame" x="77" y="316" width="146" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How you felt:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8I-OK-NFT">
+                                        <rect key="frame" x="77" y="360" width="146" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OgG-AV-QMk">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OgG-AV-QMk">
                                         <rect key="frame" x="125" y="400" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="IrQ-2e-gE0"/>
+                                            <constraint firstAttribute="width" constant="50" id="Ph3-wD-vpj"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="d8I-OK-NFT" firstAttribute="top" secondItem="4xw-ui-Rnb" secondAttribute="bottom" constant="54" id="GZx-bn-Qo0"/>
-                                    <constraint firstItem="jHV-iZ-nMw" firstAttribute="top" secondItem="V9u-Wz-ZkS" secondAttribute="top" id="IE8-CI-8dx"/>
-                                    <constraint firstItem="02e-5p-fTg" firstAttribute="top" secondItem="KRQ-aB-dhp" secondAttribute="bottom" constant="54" id="nfJ-3n-QUY"/>
-                                    <constraint firstItem="4xw-ui-Rnb" firstAttribute="top" secondItem="02e-5p-fTg" secondAttribute="bottom" constant="54" id="p4N-L5-yuE"/>
-                                    <constraint firstItem="KRQ-aB-dhp" firstAttribute="top" secondItem="jHV-iZ-nMw" secondAttribute="bottom" constant="54" id="wMu-UR-ZhM"/>
+                                    <constraint firstItem="KKS-Ut-Ebj" firstAttribute="top" secondItem="EMU-gu-Ndw" secondAttribute="bottom" constant="10" id="5af-Du-gTL"/>
+                                    <constraint firstItem="jHV-iZ-nMw" firstAttribute="top" secondItem="V9u-Wz-ZkS" secondAttribute="top" id="9if-Fv-I4y"/>
+                                    <constraint firstItem="KRQ-aB-dhp" firstAttribute="top" secondItem="jHV-iZ-nMw" secondAttribute="bottom" constant="10" id="PVk-C1-ans"/>
+                                    <constraint firstItem="d8I-OK-NFT" firstAttribute="top" secondItem="4xw-ui-Rnb" secondAttribute="bottom" constant="10" id="YrK-AO-fMx"/>
+                                    <constraint firstItem="OgG-AV-QMk" firstAttribute="top" secondItem="d8I-OK-NFT" secondAttribute="bottom" constant="10" id="aZl-3F-Tq9"/>
+                                    <constraint firstItem="4xw-ui-Rnb" firstAttribute="top" secondItem="KKS-Ut-Ebj" secondAttribute="bottom" constant="10" id="qX8-jg-cLx"/>
+                                    <constraint firstItem="EMU-gu-Ndw" firstAttribute="top" secondItem="KRQ-aB-dhp" secondAttribute="bottom" constant="10" id="tlP-JW-bUN"/>
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a9v-Vo-iPi">
@@ -341,12 +354,12 @@
                             <constraint firstItem="V9u-Wz-ZkS" firstAttribute="width" secondItem="Avg-nu-sOb" secondAttribute="width" multiplier="0.5" id="jcv-3N-4KS"/>
                             <constraint firstItem="oOF-Au-gFA" firstAttribute="top" secondItem="JUH-qf-uFZ" secondAttribute="bottom" constant="8" id="jdX-tT-Ei9"/>
                             <constraint firstItem="oOF-Au-gFA" firstAttribute="leading" secondItem="a9v-Vo-iPi" secondAttribute="trailing" constant="20" id="qPh-Y4-xnf"/>
-                            <constraint firstItem="02e-5p-fTg" firstAttribute="centerX" secondItem="Avg-nu-sOb" secondAttribute="centerX" id="y77-XM-U6Z"/>
                             <constraint firstItem="V9u-Wz-ZkS" firstAttribute="centerY" secondItem="Avg-nu-sOb" secondAttribute="centerY" id="ys5-hx-O7P"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="howImage" destination="OgG-AV-QMk" id="nmW-35-mlO"/>
+                        <outlet property="mealPic" destination="EMU-gu-Ndw" id="Oeb-OI-4DQ"/>
                         <outlet property="whatText" destination="KRQ-aB-dhp" id="Slh-BJ-ZCi"/>
                         <outlet property="whereText" destination="4xw-ui-Rnb" id="SCB-IZ-FXI"/>
                     </connections>
@@ -442,6 +455,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="default_img" width="760" height="405"/>
         <image name="how1" width="79" height="80"/>
         <image name="how2" width="79" height="80"/>
         <image name="how3" width="79" height="80"/>
